# crew-ai-ml

./: .env.example  .gitignore  README.md  pyproject.toml
data/: README.md  titanic.csv
knowledge/: user_preference.txt
src/crew_ai_ml/: crew.py  main.py
src/crew_ai_ml/config/: agents.yaml  tasks.yaml
src/crew_ai_ml/pipeline/: __init__.py  config.py  data_preparation.py  deploy.py  deploy_workspace.py  eval_workspace.py  evaluate.py  feature_transform.py  model_registry.py  prep_workspace.py  split.py  split_workspace.py  streamlit_app_builder.py  train.py  train_workspace.py  validators.py
src/crew_ai_ml/tools/: __init__.py  data_prep_tool.py  deploy_tool.py  evaluate_tool.py  split_tool.py  train_tool.py
src/crew_ai_ml/tools/deploy/: __init__.py  configure_app_ui_tool.py  document_deploy_failure_tool.py  finalize_deployment_tool.py  generate_streamlit_app_tool.py  profile_deploy_context_tool.py  validate_deploy_inputs_tool.py  write_deploy_requirements_tool.py
src/crew_ai_ml/tools/eval/: __init__.py  analyze_deploy_signals_tool.py  compute_eval_metrics_tool.py  finalize_evaluation_tool.py  generate_eval_plots_tool.py  issue_deploy_verdict_tool.py  profile_eval_context_tool.py  validate_eval_inputs_tool.py
src/crew_ai_ml/tools/prep/: __init__.py  balance_tool.py  correlation_tool.py  drop_columns_tool.py  encode_tool.py  finalize_tool.py  impute_tool.py  load_tool.py  outliers_tool.py  profile_tool.py
tests/: conftest.py  test_deploy_atomic.py  test_eval_atomic.py  test_prep_atomic.py  test_split_atomic.py  test_train_atomic.py
(+14 files in other folders)
