[project]
name = "crew_ai_ml"
version = "0.1.0"
description = "crew-ai-ml using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.5a2",
    "pandas",
    "numpy",
    "scikit-learn",
    "imbalanced-learn",
    "matplotlib",
    "seaborn",
    "joblib",
    "streamlit",
]

[project.scripts]
crew_ai_ml = "crew_ai_ml.main:run"
run_crew = "crew_ai_ml.main:run"
train = "crew_ai_ml.main:train"
replay = "crew_ai_ml.main:replay"
test = "crew_ai_ml.main:test"
run_with_trigger = "crew_ai_ml.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
